# CosineFusion

./: README.md  pyproject.toml  setup.py
benchmarks/: benchmark_beir.py  data_sets.py  metrics.py
benchmarks/results/: scifact.json
src/cosinefusion/: __init__.py  core_demo.py
src/cpp/: core_init.cpp
tests/: test_bridge.py
